--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.521.0",
     "@aws-sdk/s3-request-presigner": "^3.498.0",
+    "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "10.3.3",
     "@nestjs/config": "3.2.0",
     "@nestjs/core": "10.3.3",
@@ -48,6 +49,7 @@
     "@types/multer-s3": "3.0.3",
     "apple-signin-auth": "1.7.6",
     "bcryptjs": "2.4.3",
+    "cache-manager": "^5.4.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "dotenv": "^16.3.1",
