--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
     {
       "src": "/(.*)",
       "dest": "dist/main.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH"]
     }
   ]
 }
