--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cache-manager": "^5.4.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.3.1",
     "fb": "2.0.0",
     "google-auth-library": "9.6.3",
