--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ms": "2.1.3",
     "multer": "1.4.4",
     "multer-s3": "3.0.1",
+    "nest-casl": "^1.9.3",
     "nestjs-i18n": "10.4.5",
     "nodemailer": "6.9.10",
     "passport": "0.7.0",
