--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.521.0",
     "@aws-sdk/s3-request-presigner": "^3.498.0",
+    "@casl/ability": "^6.7.1",
     "@nestjs/cache-manager": "^2.2.1",
     "@nestjs/common": "10.3.3",
     "@nestjs/config": "3.2.0",
@@ -60,6 +61,8 @@
     "fb": "2.0.0",
     "google-auth-library": "9.6.3",
     "handlebars": "4.7.8",
+    "helper-fns": "^2.7.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
     "ms": "2.1.3",
     "multer": "1.4.4",
